Resolves: tdf#143643 ensure relayout on undo of insert comment

Change-Id: I732e23b8ff7c17abf4b5b9b7c7964fca6069543c